--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ jobs:
 
     - name: Install Packages and Set-Up
       run: |
-        sudo apt install flatpak flatpack-builder npm
+        sudo apt install flatpak flatpak-builder npm
         flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo -y
         flatpak install app/org.electronjs.Electron2.BaseApp/x86_64/stable -y
         flatpak install runtime/org.freedesktop.Sdk/x86_64/23.08 -y
@@ -36,7 +36,7 @@ jobs:
     - name: Release Artifacts
       uses: "marvinpinto/action-automatic-releases@latest"
       with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        repo_token: "${{ secrets.GH_TOKEN }}"
         automatic_release_tag: "${{ env.VERSION }}"
         prerelease: true
         title: "Development Build based on commit ${{ env.COMMIT }}" 
