--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    name: Build image
+    name: Build binaries and release preview build
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -17,7 +17,7 @@ jobs:
     - name: Install Packages and Set-Up
       run: |
         sudo apt install flatpak flatpak-builder npm
-        flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo -y
+        flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
         flatpak install app/org.electronjs.Electron2.BaseApp/x86_64/stable -y
         flatpak install runtime/org.freedesktop.Sdk/x86_64/23.08 -y
 
