--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,8 +18,8 @@ jobs:
       run: |
         sudo apt install flatpak flatpak-builder npm
         sudo flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
-        flatpak install app/org.electronjs.Electron2.BaseApp/x86_64/stable -y
-        flatpak install runtime/org.freedesktop.Sdk/x86_64/23.08 -y
+        sudo flatpak install app/org.electronjs.Electron2.BaseApp/x86_64/stable -y
+        sudo flatpak install runtime/org.freedesktop.Sdk/x86_64/23.08 -y
 
     - name: Prep Version String in package.json
       run: |
