--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Prep Version String in package.json
       run: |
-        echo "COMMIT="$(git log --pretty=format:'%h' -1)" >> $GITHUB_ENV
+        echo "COMMIT=$(git log --pretty=format:'%h' -1)" >> $GITHUB_ENV
         echo "VERSION=$(cat VERSION)-$(git log --pretty=format:'%h' -1)" >> $GITHUB_ENV
         jq --arg version "${{ env.VERSION }}" '.version = $version' package.json > temp.json
         mv temp.json package.json
