--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,8 +18,10 @@ jobs:
       run: |
         sudo apt install flatpak flatpak-builder npm
         sudo flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
-        sudo flatpak install app/org.electronjs.Electron2.BaseApp/x86_64/23.08 -y
-        sudo flatpak install runtime/org.freedesktop.Sdk/x86_64/23.08 -y
+        base_version=$(cat build/electron-builder.yml | sed -nE 's/[[:space:]]*baseVersion: ([0-9]+\.[0-9]+)/\1/p')
+        runtime_version=$(cat build/electron-builder.yml | sed -nE 's/[[:space:]]*runtimeVersion: ([0-9]+\.[0-9]+)/\1/p')
+        sudo flatpak install app/org.electronjs.Electron2.BaseApp/x86_64/$base_version -y
+        sudo flatpak install runtime/org.freedesktop.Sdk/x86_64/$runtime_version -y
 
     - name: Prep Version String in package.json
       run: |
