fix(ci): use 'name' instead of 'title' for release name

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,7 +38,7 @@ jobs:
       with:
         tag_name: "${{ env.VERSION }}"
         prerelease: true
-        title: "Development Build based on commit ${{ env.COMMIT }}"
+        name: "Development Build based on commit ${{ env.COMMIT }}"
         files: |
           qobuz-linux-${{ env.VERSION }}.flatpak
 
