--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,12 +25,11 @@ jobs:
     - name: Run Build
       run: |
         sudo apt install flatpak flatpak-builder npm python3-pip -y
-        sudo flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
-        sudo pip install git+https://github.com/flatpak/flatpak-builder-tools.git#subdirectory=node
-        sudo flatpak-node-generator npm package-lock.json --output flatpak/generated-sources.json
-        sudo flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
-        sudo flatpak install org.flatpak.Builder org.freedesktop.Sdk//24.08 org.freedesktop.Sdk.Extension.node24//24.08 org.freedesktop.Platform//24.08 org.electronjs.Electron2.BaseApp//24.08 -y
-        sudo flatpak run org.flatpak.Builder --repo=_repo --force-clean _build flatpak/dev.mukkematti.qobuz-linux.yml
+        pip install --user git+https://github.com/flatpak/flatpak-builder-tools.git#subdirectory=node
+        flatpak-node-generator npm package-lock.json --output flatpak/generated-sources.json
+        flatpak remote-add --user --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
+        flatpak install --user org.flatpak.Builder org.freedesktop.Sdk//24.08 org.freedesktop.Sdk.Extension.node24//24.08 org.freedesktop.Platform//24.08 org.electronjs.Electron2.BaseApp//24.08 -y
+        flatpak run org.flatpak.Builder --repo=_repo --force-clean _build flatpak/dev.mukkematti.qobuz-linux.yml
         flatpak build-bundle _repo qobuz-linux-${{ env.VERSION }}.flatpak dev.mukkematti.qobuz-linux
 
     - name: Release Artifacts
