--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,6 +22,9 @@ jobs:
         jq --arg version "$version" '.version = $version' package.json > temp.json
         mv temp.json package.json
 
+    - name: Install Xvfb
+      run: sudo apt-get update && sudo apt-get install -y xvfb
+
     - name: Build Flatpak
       uses: flatpak/flatpak-github-actions/flatpak-builder@v6
       with:
