--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,6 +17,9 @@ jobs:
     - name: Check out Repository
       uses: actions/checkout@v4
 
+    - name: Set git safe.directory
+      run: git config --global --add safe.directory /__w/qobuz-linux/qobuz-linux
+
     - name: Prep Version String in package.json
       run: |
         version="$(cat VERSION)-$(git log --pretty=format:'%h' -1)"
