--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,6 +20,7 @@ jobs:
     - name: Build Flatpak
       run: |
         git config --global --add safe.directory /__w/qobuz-linux/qobuz-linux
+        mkdir -p /app/var/lib/dbus
         dbus-uuidgen --ensure
         flatpak remote-add --user --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
         flatpak-builder --user --install-deps-from=flathub --force-clean _build flatpak/dev.mukkematti.qobuz-linux.yml
