--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,8 +23,8 @@ jobs:
         mkdir -p /var/lib/dbus
         dbus-uuidgen --ensure=/var/lib/dbus/machine-id
         flatpak remote-add --user --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
-        dbus-run-session -- flatpak-builder --user --default-branch=main --disable-rofiles-fuse --install-deps-from=flathub --force-clean _build flatpak/dev.mukkematti.qobuz-linux.yml
-        flatpak build-bundle ~/.local/share/flatpak/repo qobuz-linux-${{ env.VERSION }}.flatpak dev.mukkematti.qobuz-linux main
+        dbus-run-session -- flatpak-builder --user --disable-rofiles-fuse --install-deps-from=flathub --force-clean _build flatpak/dev.mukkematti.qobuz-linux.yml
+        flatpak build-bundle ~/.local/share/flatpak/repo qobuz-linux-${{ env.VERSION }}.flatpak dev.mukkematti.qobuz-linux master
 
     - name: Release Artifacts
       uses: "softprops/action-gh-release@v2"
