--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,14 +17,18 @@ jobs:
     - name: Check out Repository
       uses: actions/checkout@v4
 
+    - name: Install Xvfb
+      run: sudo apt-get update && sudo apt-get install -y xvfb
+
+    - name: Set git safe.directory
+      run: git config --global --add safe.directory /__w/qobuz-linux/qobuz-linux
+
     - name: Build Flatpak
-      run: |
-        git config --global --add safe.directory /__w/qobuz-linux/qobuz-linux
-        mkdir -p /var/lib/dbus
-        dbus-uuidgen --ensure=/var/lib/dbus/machine-id
-        flatpak remote-add --user --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
-        dbus-run-session -- flatpak-builder --user --disable-rofiles-fuse --install-deps-from=flathub --force-clean _build flatpak/dev.mukkematti.qobuz-linux.yml
-        flatpak build-bundle ~/.local/share/flatpak/repo qobuz-linux-${{ env.VERSION }}.flatpak dev.mukkematti.qobuz-linux ${{ env.GITHUB_REF_NAME }}
+      uses: flatpak/flatpak-github-actions/flatpak-builder@v6
+      with:
+        manifest-path: flatpak/dev.mukkematti.qobuz-linux.yml
+        bundle: qobuz-linux-${{ env.VERSION }}.flatpak
+        cache-key: flatpak-builder-${{ github.sha }}
 
     - name: Release Artifacts
       uses: "softprops/action-gh-release@v2"
