--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,17 +17,15 @@ jobs:
     - name: Check out Repository
       uses: actions/checkout@v4
 
-    - name: Build Flatpak (aarch64)
+    - name: Build Flatpak
       run: |
+        flatpak remote-add --if-not-exists flathub-beta https://flathub.org/beta-repo/flathub-beta.flatpakrepo
+        flatpak --user remote-modify --enable flathub
+        flatpak --user remote-modify --enable flathub-beta
+        flatpak --user install -y flathub-beta org.freedesktop.Sdk.Extension.node22//24.08
         git config --global --add safe.directory /__w/qobuz-linux/qobuz-linux
-        flatpak-builder --arch=aarch64 --user --disable-rofiles-fuse --install-deps-from=flathub --force-clean _build flatpak/dev.mukkematti.qobuz-linux.yml
-        flatpak build-bundle _repo qobuz-linux-aarch64-${{ env.VERSION }}.flatpak dev.mukkematti.qobuz-linux
-
-    - name: Build Flatpak (x86_64)
-      run: |
-        git config --global --add safe.directory /__w/qobuz-linux/qobuz-linux
-        flatpak-builder --arch=x86_64 --user --disable-rofiles-fuse --install-deps-from=flathub --force-clean _build flatpak/dev.mukkematti.qobuz-linux.yml
-        flatpak build-bundle _repo qobuz-linux-x86_64-${{ env.VERSION }}.flatpak dev.mukkematti.qobuz-linux
+        flatpak-builder --user --disable-rofiles-fuse --install-deps-from=flathub --force-clean _build flatpak/dev.mukkematti.qobuz-linux.yml --extra-sources=generated-sources.json
+        flatpak build-bundle _repo qobuz-linux-${{ env.VERSION }}.flatpak dev.mukkematti.qobuz-linux
 
     - name: Release Artifacts
       uses: "softprops/action-gh-release@v2"
