--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,6 +27,12 @@ jobs:
         echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
         echo "COMMIT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
+    - name: Set up binfmt
+      run: |
+        # The github action runner provided by default does not have binfmt support for arm64
+        # See: https://github.com/tonistiigi/binfmt?tab=readme-ov-file#qemu-user-static-register
+        docker run --rm --privileged tonistiigi/binfmt --install all
+
     - name: Build Flatpak
       run: |
         flatpak remote-add --user --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
@@ -34,7 +40,8 @@ jobs:
         flatpak --user remote-modify --enable flathub
         flatpak --user remote-modify --enable flathub-beta
         git config --global --add safe.directory /__w/qobuz-linux/qobuz-linux
-        flatpak-builder --arch=${{ matrix.arch }} --verbose --user --disable-rofiles-fuse --install-deps-from=flathub --force-clean --repo=repo _build flatpak/dev.mukkematti.qobuz-linux.yml --extra-sources=generated-sources.json
+        flatpak-node-generator npm package-lock.json
+        flatpak-builder --arch=${{ matrix.arch }} --verbose --user --disable-rofiles-fuse --install-deps-from=flathub --force-clean --repo=repo _build flatpak/dev.mukkematti.qobuz-linux.yml
         flatpak build-bundle repo qobuz-linux-${{ matrix.arch }}-${{ env.VERSION }}.flatpak dev.mukkematti.qobuz-linux
 
     - name: Release Artifacts
