ci: Use native runners for builds
This commit updates the GitHub Actions workflow to use native runners for each architecture:
- ubuntu-latest for x86_64
- ubuntu-latest-arm64 for aarch64

This removes the need for QEMU and should result in faster and more reliable builds.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,21 +5,23 @@ on: [push]
 jobs:
   build:
     name: Build binaries and release preview build
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
 
     strategy:
       matrix:
-        arch: [ "x86_64", "aarch64" ]
+        include:
+          - arch: x86_64
+            runner: ubuntu-latest
+          - arch: aarch64
+            runner: ubuntu-latest-arm64
+
+    runs-on: ${{ matrix.runner }}
+    permissions:
+      contents: write
 
     steps:
 
     - name: Check out Repository
       uses: actions/checkout@v4
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
 
     - name: Get Version and Commit
       id: get_version
