fix: Install flatpak-node-generator in workflow
This commit adds a step to the GitHub Actions workflow to install flatpak-node-generator using pipx. This is required for the build to succeed.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,6 +33,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y flatpak flatpak-builder jq
+        pipx install flatpak-node-generator
 
     - name: Build Flatpak
       run: |
