--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,9 +10,9 @@ jobs:
       matrix:
         include:
           - arch: x86_64
-            runner: ubuntu-latest
+            runner: ubuntu-24.04
           - arch: aarch64
-            runner: ubuntu-latest-arm64
+            runner: ubuntu-24.04-arm64
 
     runs-on: ${{ matrix.runner }}
     permissions:
