--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,7 +12,7 @@ jobs:
           - arch: x86_64
             runner: ubuntu-24.04
           - arch: aarch64
-            runner: ubuntu-24.04-arm64
+            runner: ubuntu-24.04-arm
 
     runs-on: ${{ matrix.runner }}
     permissions:
